--- a/java-blog/src/main/resources/templates/home/article-detail.html
+++ b/java-blog/src/main/resources/templates/home/article-detail.html
@@ -180,26 +180,49 @@
 
 
 
-    <main class="container d-flex flex-column justify-content-center align-items-center">
-        <!-- CARD -->
-        <div class="content-box-update">
+    <main>
+        <div class="container">
             <div class="row justify-content-center">
-                <div class="col-sm-12 col-lg-8 mb-5">
-                    <div class="d-flex align-items-start flex-column">
-                        <a th:href="${previousPage}" class="btn-back mt-5 mb-5">
-                            <i class="fa-solid fa-circle-arrow-left me-1"></i>
-                            <span
-                                th:text="${previousPage.contains('/dashboard/admin') ? 'Back to Dashboard' : 'Back to Home'}"></span>
-                        </a>
-                    </div>
-                    <h1 th:text="${article.title}" class="text-center"></h1>
-                    <hr>
-                    <div class="mt-3 d-flex justify-content-center">
-                        <img th:src="${#strings.startsWith(article.image, 'uploads/') ? '/' + article.image : '/img/' + article.image}"
-                            alt="Article Image" class="img-fluid mt-4">
-                    </div>
-                    <p class="mt-5 fs-5" th:text="${article.body}" style="text-align: justify;"></p>
+                <div class="col-sm-12 col-lg-12">
+                    <!-- Content-box con posizione relativa -->
+                    <div class="content-box-update text-center position-relative mt-5">
+                        <div class="d-flex justify-content-center align-items-start flex-column">
+                            <a th:href="${previousPage}" class="btn-back mt-2 mb-5">
+                                <i class="fa-solid fa-circle-arrow-left me-1"></i>
+                                <span
+                                    th:text="${previousPage.contains('/dashboard/admin') ? 'Back to Dashboard' : 'Back to Home'}"></span>
+                            </a>
+                        </div>
+                        <p th:text="${article.title}" class="fs-1"></p>
+                        <hr>
+                        <div class="d-flex flex-columsjustify-content-between">
+                            <img th:src="${#strings.startsWith(article.image, 'uploads/') ? '/' + article.image : '/img/' + article.image}"
+                                alt="Article Image" class="img-show img-fluid mt-1 px-5">
+                            <div class="d-flex flex-column align-items-start">
+                                <span class="badge badge-cat_inArt mt-2 fs-6"
+                                    th:text="${article.category.name}"></span>
+                                <p class="mt-5 fs-3 text-start" th:text="${article.body}"></p>
+                            </div>
+                        </div>
 
+                        <!-- Card posizionata in modo assoluto -->
+                        <div class="position-absolute" style="right: 20px; top: 0;">
+                            <div class="card shadow-lg modern-card px-1">
+                                <div th:if="${param.from != null and param.from[0] == 'review'}"
+                                    class="d-flex flex-column gap-3 text-center">
+                                    <form th:action="@{/articles/{id}/approve(id=${article.id})}" method="post"
+                                        class="d-inline pt-3">
+                                        <button type="submit" class="btn btn-approve">Approve</button>
+                                    </form>
+                                    <form th:action="@{/articles/{id}/reject(id=${article.id})}" method="post"
+                                        class="d-inline">
+                                        <button type="submit" class="btn btn-reject">Reject</button>
+                                    </form>
+                                    <a class="btn btn-reviewLater d-inline" th:href="@{/dashboard/admin}">Review Later</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
