--- a/java-blog/src/main/resources/static/css/style.css
+++ b/java-blog/src/main/resources/static/css/style.css
@@ -18,6 +18,10 @@ a {
     width: 25%;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 /* -------------------------------- */
 
 /* navbar */
@@ -61,10 +65,8 @@ a {
 .navbar {
     display: flex;
     height: 100px;
-}
-
-.nav-bg {
-    background: #a6cdf9;
+    background-color: rgba(166, 205, 249, 0.6);
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
 }
 
 .navbar-logo {
@@ -135,10 +137,9 @@ a {
     border: 3px solid #80044c;
 }
 
-.badge-cat {   
+.badge-cat {
     padding: 8px;
     font-size: medium;
-    /* height: 38px; */
 }
 
 .btn-logged:hover,
@@ -172,11 +173,29 @@ a {
 /* ------------------------------------------ */
 
 body {
-    background-color: #000000;
+    position: relative;
+    overflow-x: hidden;
+}
+
+body::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url('/img/bgBody2.jpg') no-repeat center center / cover;
+    z-index: -1;
+    opacity: 0.9;
+    pointer-events: none;
 }
 
 main {
     padding: 2rem 0;
+}
+
+.container-home {
+    max-width: 2000px;
 }
 
 .filter-cat {
@@ -186,11 +205,9 @@ main {
 
 .content-box-article {
     width: 100%;
-    max-width: 800px;
-    padding: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    max-width: 2000px;
+    padding: 60px 60px 60px 60px;
+    margin-bottom: 180px;
     background: #2d3a4f7f;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(10px);
@@ -198,12 +215,34 @@ main {
     color: #c6dffd;
 }
 
+.row-article {
+    gap: 200px;
+}
+
+.col-article {
+    flex: 1 1 365.33px;
+    max-width: 365.33px;
+}
+
+@media (max-width: 992px) {
+    .col-article {
+        flex: 1 1 calc(50% - 20px);
+        max-width: calc(50% - 20px);
+    }
+}
+
+@media (max-width: 576px) {
+    .col-article {
+        flex: 1 1 100%;
+        max-width: 100%;
+    }
+}
+
 .card {
-    max-width: 800px;
     width: 100%;
+    height: 100%;
     background-color: transparent;
     border-radius: 8px;
-    margin-top: 20px;
     overflow: hidden;
 }
 
@@ -215,17 +254,11 @@ main {
     background-color: #ffffff;
 }
 
-.img-article {
-    max-width: 800px !important;
-    margin: 0 auto;
-    display: block;
-    border: none !important;
-}
-
 .img-fluid {
     width: 100%;
-    height: auto;
+    height: 245px;
     object-fit: cover;
+    border: none !important;
 }
 
 .btn-img {
@@ -354,6 +387,7 @@ main {
 
 .form-label {
     font-weight: bold;
+    font-size: 25px;
 }
 
 .input-usn,
@@ -496,12 +530,12 @@ main {
 }
 
 .text-review {
-    text-shadow: 0 0 5px #0A58CA,  0 0 8px #0D6EFD,  0 0 11px #0D6EFD,  0 0 15px #0D6EFD, 0 0 15px #0D6EFD;
+    text-shadow: 0 0 5px #0A58CA, 0 0 8px #0D6EFD, 0 0 11px #0D6EFD, 0 0 15px #0D6EFD, 0 0 15px #0D6EFD;
     color: #c6dffd;
 }
 
 .text-rejected {
-    text-shadow: 0 0 5px #fe435faa, 0 0 8px  #fe435faa,0 0 12px #DC3545, 0 0 12px #fe435f;
+    text-shadow: 0 0 5px #fe435faa, 0 0 8px #fe435faa, 0 0 12px #DC3545, 0 0 12px #fe435f;
     color: #c6dffd;
 }
 
@@ -515,7 +549,6 @@ main {
 
 .modern-card {
     background: linear-gradient(to bottom, #2d3a4f00 0%, #2d3a4f 200%);
-    /* border: 1px solid #2d3a4f; */
     border: none;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
@@ -567,4 +600,56 @@ main {
 .badge-cat_inArt {
     background-color: #80044c;
     color: #ffffff;
+}
+
+#previewModal .card:hover {
+    transform: none !important;
+}
+
+.custom-modal {
+    max-width: 1000px;
+}
+
+.container-profile {
+    min-height: 80vh;
+}
+
+.content-box-profile {
+    width: 100%;
+    max-width: 800px;
+    margin: auto;
+    background: #2d3a4f7f;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    color: #c6dffd;
+}
+
+.carousel {
+    width: 100%;
+    max-width: 1250px;
+}
+
+.carousel-indicators [data-bs-target] {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #fff;
+    margin: 0 10px;
+}
+
+.card-register {
+    background: #2d3a4f7f;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    color: #c6dffd;
+    width: 300px;
+    height: auto;
+}
+
+.btn-register {
+    width: 60%;
+    font-weight: bold;
+    font-size: larger;
 }
