--- a/java-blog/src/main/resources/templates/dashboard/dash_create.html
+++ b/java-blog/src/main/resources/templates/dashboard/dash_create.html
@@ -6,8 +6,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
     <link rel="stylesheet" th:href="@{/css/style.css}">
+    <script src="/js/scriptPreview.js" defer></script>
 
     <title>CREATE ARTICOLO</title>
 </head>
@@ -15,7 +17,7 @@
 <body>
 
     <header class="sticky-top">
-        <nav class="navbar navbar-expand-lg nav-bg">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <!-- Riga principale: contiene la parte sinistra (toggler, logo, menu desktop) e la parte destra (dropdown login) -->
                 <div class="d-flex w-100 align-items-center justify-content-between">
@@ -141,7 +143,7 @@
     <main>
         <div class="container">
             <div class="content-box-update">
-                <div class="row text-center justify-content-center">
+                <div class="row text-center justify-content-center mx-5">
 
                     <div class="text-start mt-5">
                         <h1 class="title-color">Create New Post</h1>
@@ -150,8 +152,8 @@
 
                             <!-- titolo -->
 
-                            <div class="mb-3 mt-5 stile-form">
-                                <label for="title" class="form-label">Title</label>
+                            <div class="mb-5 mt-5 stile-form">
+                                <label for="title" class="form-label">Title *</label>
                                 <input name="title" type="text" class="form-control" id="title" placeholder="Post title"
                                     th:field="*{title}" th:errorClass="is-invalid">
                                 <div th:if="${#fields.hasErrors('title')}" class="invalid-feedback">
@@ -163,13 +165,10 @@
 
                             <!-- contenuto -->
 
-                            <div class="mb-3 stile-form">
-                                <label for="body" class="form-label">Content</label>
-                                <div class="mb-3">
-                                    <textarea class="form-control" placeholder="Write your content" id="body"
-                                        th:field="*{body}" rows="8" maxlength="800"
-                                        th:errorClass="is-invalid"></textarea>
-                                </div>
+                            <div class="mb-5 stile-form">
+                                <label for="body" class="form-label">Content *</label>
+                                <textarea class="form-control" placeholder="Write your content" id="body"
+                                    th:field="*{body}" rows="8" maxlength="800" th:errorClass="is-invalid"></textarea>
                                 <div th:if="${#fields.hasErrors('body')}" class="invalid-feedback">
                                     <ul>
                                         <li th:each="err : ${#fields.errors('body')}" th:text="${err}"></li>
@@ -177,37 +176,43 @@
                                 </div>
                             </div>
 
-                            <!-- categoria -->
+                            <!-- categoria e immagine-->
 
-                            <div class="mb-3 stile-form ">
-                                <label for="category" class="form-label w-50">Category </label>
-                                <select id="category" name="category" th:field="*{category.id}"
-                                    class="form-select mb-4">
-                                    <option value="" selected hidden>Open this select menu</option>
-                                    <option th:each="category : ${category}" th:value="${category.id}"
-                                        th:text="${category.name}"></option>
-                                </select>
-                            </div>
-
-                            <!-- immagine -->
-
-                            <div class="mb-3 mt-5 stile-form">
-                                <label for="imageFile" class="form-label">Image</label>
-
-                                <input name="imageFile" type="file" class="form-control" id="imageFile"
-                                    placeholder="No file selected" th:errorClass="is-invalid">
-                                <div th:if="${#fields.hasErrors('imageFile')}" class="invalid-feedback">
-                                    <ul>
-                                        <li th:each="err : ${#fields.errors('imageFile')}" th:text="${err}"></li>
-                                    </ul>
+                            <div class="mb-5 stile-form row gap-5">
+                                <div class="col-md">
+                                    <label for="category" class="form-label">Category *</label>
+                                    <select id="category" name="category" th:field="*{category}" class="form-select"
+                                        th:errorClass="is-invalid">
+                                        <option value="" selected hidden>Open this select menu</option>
+                                        <option th:each="category : ${category}" th:value="${category.id}"
+                                            th:text="${category.name}"></option>
+                                    </select>
+                                    <div th:if="${#fields.hasErrors('category')}" class="invalid-feedback">
+                                        <ul>
+                                            <li th:each="err : ${#fields.errors('category')}" th:text="${err}"></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="col-md">
+                                    <label for="imageFile" class="form-label">Image *</label>
+                                    <input name="imageFile" type="file" class="form-control" id="imageFile"
+                                        placeholder="No file selected" th:errorClass="is-invalid">
+                                    <div th:if="${#fields.hasErrors('imageFile')}" class="invalid-feedback">
+                                        <ul>
+                                            <li th:each="err : ${#fields.errors('imageFile')}" th:text="${err}"></li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
 
-                            <!-- salva -->
+                            <!-- anteprima e salva -->
 
-                            <div class="d-flex justify-content-center">
-                                <button class="d-flex justify-content-center rounded btn btn-outline-custom mt-5 w-60"
-                                    type="submit">Create Post</button>
+                            <div class="d-flex justify-content-center gap-5">
+                                <button id="previewButton" class="rounded btn btn-outline-custom mt-5 w-60"
+                                    type="button" data-bs-toggle="modal" data-bs-target="#previewModal"><i
+                                        class="fa-solid fa-eye me-1"></i>Preview</button>
+                                <button class="rounded btn btn-outline-custom mt-5 w-60" type="submit">Create
+                                    Post</button>
                             </div>
                         </form>
                     </div>
@@ -216,14 +221,45 @@
         </div>
     </main>
 
-
-    <footer>
-    </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 
+    <!-- Modal -->
+    <div class="modal fade" id="previewModal" tabindex="-1" aria-labelledby="previewModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="previewModalLabel">Article Preview</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="card position-relative" style="border: none;">
+
+                        <!-- Immagine -->
+                        <img id="previewImage" src="" alt="Article Image" class="img-fluid"
+                            style="max-height:300px;">
+                        <div class="card-body">
+
+                            <!-- Titolo -->
+                            <h3 id="previewTitle" class="card-title"></h3>
+
+                            <!-- Data di pubblicazione -->
+                            <p class="card-text text-muted">
+                                Published on: <span id="previewDate"></span>
+                            </p>
+
+                            <!-- Categoria come badge -->
+                            <span class="badge badge-cat_inArt" id="previewCategory"></span>
+
+                            <!-- Corpo dell'articolo -->
+                            <p id="previewBody" class="card-text mt-2 mb-5"></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
