--- a/java-blog/src/main/resources/templates/dashboard/dash_update.html
+++ b/java-blog/src/main/resources/templates/dashboard/dash_update.html
@@ -15,7 +15,7 @@
 <body>
 
     <header class="sticky-top">
-        <nav class="navbar navbar-expand-lg nav-bg">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <!-- Riga principale: contiene la parte sinistra (toggler, logo, menu desktop) e la parte destra (dropdown login) -->
                 <div class="d-flex w-100 align-items-center justify-content-between">
@@ -140,9 +140,9 @@
     <main>
         <div class="container">
             <div class="content-box-update">
-                <div class="row text-center justify-content-center">
+                <div class="row text-center justify-content-center mx-5">
 
-                    <div class="text-start mt-5">
+                    <div class="text-start mt-3">
                         <h1 class="title-color">Edit Post</h1>
                         <form th:action="@{/article/{id}/update(id=${article.id})}" th:object="${article}" method="post"
                             class="stile-form" enctype="multipart/form-data">
@@ -203,8 +203,8 @@
                                     <div class="mt-2">
                                         <input name="imageFile" type="file" class="form-control stile-form me-5"
                                             id="imageFile">
-                                        <p class="form-text text-muted">Lascia vuoto per mantenere l'immagine
-                                            attuale.</p>
+                                        <p class="form-text text-light">Just leave it blank to keep the current image.
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -212,7 +212,7 @@
                             <!-- salva -->
 
                             <div class="d-flex justify-content-center">
-                                <button class="d-flex justify-content-center rounded btn btn-outline-custom mt-5 w-60"
+                                <button class="d-flex justify-content-center rounded btn btn-outline-custom fs-4 mt-5 py-3"
                                     type="submit">Update</button>
                             </div>
                         </form>
