--- a/java-blog/src/main/resources/templates/home/article-detail.html
+++ b/java-blog/src/main/resources/templates/home/article-detail.html
@@ -17,7 +17,7 @@
 <body>
 
     <header class="sticky-top">
-        <nav class="navbar navbar-expand-lg nav-bg">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <!-- Riga principale: contiene la parte sinistra (toggler, logo, menu desktop) e la parte destra (dropdown login) -->
                 <div class="d-flex w-100 align-items-center justify-content-between">
@@ -195,9 +195,9 @@
                         </div>
                         <p th:text="${article.title}" class="fs-1"></p>
                         <hr>
-                        <div class="d-flex flex-columsjustify-content-between">
+                        <div class="d-flex flex-columsjustify-content-between align-items-center">
                             <img th:src="${#strings.startsWith(article.image, 'uploads/') ? '/' + article.image : '/img/' + article.image}"
-                                alt="Article Image" class="img-show img-fluid mt-1 px-5">
+                                alt="Article Image" class="img-show img-fluid mt-1 px-5 d-flex">
                             <div class="d-flex flex-column align-items-start">
                                 <span class="badge badge-cat_inArt mt-2 fs-6"
                                     th:text="${article.category.name}"></span>
