--- a/java-blog/src/main/resources/templates/home/profile.html
+++ b/java-blog/src/main/resources/templates/home/profile.html
@@ -16,7 +16,7 @@
 <body>
 
     <header class="sticky-top">
-        <nav class="navbar navbar-expand-lg nav-bg">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <!-- Riga principale: contiene la parte sinistra (toggler, logo, menu desktop) e la parte destra (dropdown login) -->
                 <div class="d-flex w-100 align-items-center justify-content-between">
@@ -141,31 +141,29 @@
 
 
     <main>
-        <div class="container d-flex flex-column justify-content-center align-items-center">
-            <div class="content-box-article">
-                <div class="row">
-                    <div class="col-sm-12 col-lg-8">
-                        <div class="card card-profile mx-auto my-5">
-                            <div class="card-title text-center py-3 fs-3 fw-bold">Il tuo Profilo
-                            </div>
-                            <div class="card-body d-flex align-items-center justify-content-center gap-5">
-                                <div
-                                    class="content-box-img position-relative d-flex align-items-center justify-content-center">
-                                    <img th:src="${user != null and user.photoProfile != null 
+        <div class="container container-profile d-flex flex-column justify-content-center align-items-center">
+            <div class="content-box-profile d-flex flex-column justify-content-center align-items-center">
+                <div class="col-sm-12 col-lg-8">
+                    <div class="card card-profile mx-auto my-5 border-white">
+                        <div class="card-title text-center py-3 fs-3 fw-bold text-white">Il tuo Profilo
+                        </div>
+                        <div class="card-body d-flex align-items-center justify-content-center gap-5">
+                            <div
+                                class="content-box-img position-relative d-flex align-items-center justify-content-center">
+                                <img th:src="${user != null and user.photoProfile != null 
                                         ? (#strings.startsWith(user.photoProfile, 'uploads/') 
                                              ? '/' + user.photoProfile 
                                              : '/img/' + user.photoProfile)
                                         : '/img/defaultPhotoProfile.png'}" alt="Foto profilo utente"
-                                        class="img-profile border-bottom">
-                                    <button type="button" data-bs-toggle="modal"
-                                        th:data-bs-target="'#imageModal' + ${user.id}" data-id="${user.id}"
-                                        class="btn btn-imgProfile position-absolute top-0 end-0 m-2">
-                                        <i class="fa-solid fa-pencil icon-scale"></i>
-                                    </button>
-                                </div>
-                                <div th:text="${#strings.toUpperCase(loggedUser.substring(0,1)) + loggedUser.substring(1)}"
-                                    class="fs-4 fw-bold ps-3"></div>
+                                    class="img-profile border-bottom">
+                                <button type="button" data-bs-toggle="modal"
+                                    th:data-bs-target="'#imageModal' + ${user.id}" data-id="${user.id}"
+                                    class="btn btn-imgProfile position-absolute top-0 end-0 m-2">
+                                    <i class="fa-solid fa-pencil icon-scale"></i>
+                                </button>
                             </div>
+                            <div th:text="${#strings.toUpperCase(loggedUser.substring(0,1)) + loggedUser.substring(1)}"
+                                class="fs-4 fw-bold ps-3"></div>
                         </div>
                     </div>
                 </div>
